[package]
name = "ngrok-wrapper"
version = "0.5.6"
authors = ["sanketkheni"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A minimal ngrok wrapper"
repository = "https://github.com/sanketkheni01/ngrok-rust-wrapper"
documentation = "https://github.com/sanketkheni01/ngrok-rust-wrapper"
readme = "README.md"


[lib]
name = "ngrok_wrapper"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "1", features=["json"] }
url = "2"
thiserror = "1"
serde_json = "1"


[dev_dependencies]
warp = "0.2"
tokio = {version="0.2", features=["full"]}
